  -- added various protocol related fixes
  -- added apiregister support
  -- added autoupdate support for WOLv2 clients
  -- added variables into bnetd.conf for wol FTP update server specification
  -- fixed voice flag not shown for clients in channel
  -- fixed bug in RedAlert2/Yuri when game owner changes maximum players
  -- added QuickMatch support for RA2/YURI

[WAR3]
  -- added support for SRP3 based account creation/login
  -- added support for passchange for SRP3 based accounts

[MISC]
  -- added /clan whisper subcommand
  -- added /clan create/invite/disband subcommands
  -- added clan_min_invites to bnetd.conf for miminum accepted
     invitations need in clan-creating process (default is 2)

 ChangeLog for 1.8.5 (since 1.8.4)
=========================================

[VCHECK]
  -- added STAR/SEXP IX86 1.16 and 1.16.1 vcheck entries

[WAR3]
  -- fixed bug when saved games could not be loaded
  -- fixed bug when clanmember can promote/demote any
     member of his clan by sending proper rankupdate packet
  -- fixed bug when a hosting bot was able to create a 
     custom game which caused clients to disconect

[MISC]
  -- updated IX86 autoupdate according to STAR/SEXP 1.16.1

 ChangeLog for 1.8.4 (since 1.8.3)
=========================================

[WAR3]
  -- fixed possible server crash on many ill-formated packets
  
[SQL]
  -- fixed MySQL reconnection issues for MySQL >= 5.0.19

[IRC/WOL]
  -- fixed bug when client does not got proper information
     when account is already in use

[MISC]
  -- fixed bug when Voiced client was not possible to talk in
     moderated channels

 
 ChangeLog for 1.8.3 (since 1.8.2)
=========================================

[WOL]
  -- added Dune 2000 Support
  -- fixed malformed time format in startgame message
  -- fixed log warnings/errors rising in login process

[MISC]
  -- fixed malformed output by /cg list command

[VCHECK]
  -- added WAR3/W3XP IX86 1.21b vcheck entries